--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       </section>
 
-      <section class="knowledge">
+      <!-- <section class="knowledge">
         <div class="knowledge__container container">
           <figure class="knowledge__picture">
             <img src="./images/macbook.png" class="knowledge__img" />
@@ -395,7 +395,7 @@
           Derechos reservados &copy; Jordan Alexander
         </h3>
       </section>
-    </footer>
+    </footer> -->
 
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
